# vst_playground

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  README.md  break_scientist.html  choir_box.html  drum_smash.html  index.html  install.html  install_lizard_vst.py  pitch_wobble.html  reverse_reverb.html  shared.css  through_the_wall.html
.github/workflows/: build.yml
assets/: install_lizard_vst.py
break_scientist/: CMakeLists.txt  README.md
break_scientist/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
choir_box/: CMakeLists.txt
choir_box/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
drum_smash/: CMakeLists.txt
drum_smash/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
pitch_wobble/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
pitch_wobble/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
reverse_reverb/: CMakeLists.txt  PluginEditor.h
reverse_reverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
through_the_wall/: CMakeLists.txt  README.md
through_the_wall/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
